Implemented listing all contacts and add contacts